Normalize Destination as table. Add origin country.