@@ -3,12 +3,15 @@ package com.ai.demo.travel.service;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.mockito.Mockito.*;
 
+import com.ai.demo.travel.dto.DestinationDTO;
 import com.ai.demo.travel.dto.TravelPlanDTO;
 import com.ai.demo.travel.mapper.TravelPlanMapper;
+import com.ai.demo.travel.model.Destination;
 import com.ai.demo.travel.model.TravelPlan;
 import com.ai.demo.travel.model.TripType;
 import com.ai.demo.travel.model.repository.TravelPlanRepository;
 import java.time.LocalDate;
+import java.util.Collections;
 import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -37,8 +40,7 @@ class TravelPlanServiceTest {
     void testSave_shouldStoreTravelPlan() {
         Long userId = 1L;
         TravelPlanDTO dto = TravelPlanDTO.builder()
-                .destinationCountries(List.of("PT"))
-                .destinationCities(List.of("Lisbon"))
+                .destinations(Collections.singletonList(DestinationDTO.builder().stayingDays(15L).city("Lisbon").country("PT").build()))
                 .startDate(LocalDate.of(2025, 6, 1))
                 .endDate(LocalDate.of(2025, 6, 10))
                 .tripType(TripType.VACATION)
@@ -51,8 +53,8 @@ class TravelPlanServiceTest {
 
         TravelPlanDTO saved = service.save(userId, dto);
 
-        assertEquals("PT", saved.getDestinationCountries().get(0));
-        assertEquals("Lisbon", saved.getDestinationCities().get(0));
+        assertEquals("PT", saved.getDestinations().get(0).getCountry());
+        assertEquals("Lisbon", saved.getDestinations().get(0).getCity());
 
         verify(repository).save(any());
     }
@@ -62,8 +64,7 @@ class TravelPlanServiceTest {
         Long userId = 2L;
         TravelPlan plan = TravelPlan.builder()
                 .userProfileId(userId)
-                .destinationCountries(List.of("ES"))
-                .destinationCities(List.of("Madrid"))
+                .destinations(Collections.singletonList(Destination.builder().stayingDays(15L).city("Madrid").country("ES").build()))
                 .startDate(LocalDate.of(2025, 4, 1))
                 .endDate(LocalDate.of(2025, 4, 8))
                 .tripType(TripType.WORK)
@@ -75,7 +76,7 @@ class TravelPlanServiceTest {
         List<TravelPlanDTO> results = service.findAllByUser(userId);
 
         assertEquals(1, results.size());
-        assertEquals("Madrid", results.get(0).getDestinationCities().get(0));
-        assertEquals("ES", results.get(0).getDestinationCountries().get(0));
+        assertEquals("Madrid", results.get(0).getDestinations().get(0).getCity());
+        assertEquals("ES", results.get(0).getDestinations().get(0).getCountry());
     }
 }
